Remove grouping selcetor from style.css Removed class1 & class2 grouping selctor Class 1 & 2 are now separate

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,5 @@
 /* styles.css */
-.class1,
-.class2 {
+.class1{
     background-color:#e6717b;
     font-family: Verdana, DejaVu Sans, sans-serif;
 } 
@@ -10,4 +9,9 @@
 #id1 {
     color: #0000ff;
     font-size: 36px;
+}
+#id2 {
+    background-color: #7ede5f;
+    font-size: 24px;
+    font-weight: bold;
 }
