--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,7 +1,7 @@
 .class1,
 .class2 {
     font-size: 28px;
-    font-family: 'Helvetica', 'Times New Roman', sans-serif;
+    font-family: Helvetica, "Times New Roman", sans-serif;
 }
 .class1 {
     background-color: black;
