--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -14,12 +14,17 @@ body {
   background: #e3f4ff;
   margin: 8px;
   font-size: 16px;
-  
+  padding: 8px;
+
 }
 
 .content {
   background: #e3f4ff;
   margin: 8px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .button-container {
