--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,14 +1,13 @@
 .header  {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
   display: flex;
-  justify-content: center;
-  align-items: center;
   margin: auto;
   font-size: 48px;
   font-weight: 900;
@@ -22,13 +21,16 @@ ul {
   list-style-type: none;
   display: flex;
   align-items: center;
- 
+  margin: 0;
+  padding: 0;
+  gap: 10px;
 
 }
 
 a {
   font-size: 22px;
   background: white;
+  margin: auto;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
