--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   align-items: center;
   font-family: monospace;
   background: papayawhip;
+  padding: 10px;
 }
 
 .logo {
@@ -30,7 +31,6 @@ ul {
 a {
   font-size: 22px;
   background: white;
-  margin: auto;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
