Create .left-items styling and set to flex layout.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -25,6 +25,16 @@ body {
   height: 48px;
 }
 
+.left-items {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+
+
+
 .logo {
   color: rebeccapurple;
   font-size: 32px;
