--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -29,8 +29,14 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+
 }
 
+.right-items {
+  display: flex; 
+  justify-content: space-evenly;
+  align-items: center;
+}
 
 
 
@@ -57,5 +63,7 @@ a {
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  gap: 18px;
 }
