--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -38,7 +38,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   gap: 18px;
-  
+
 }
 
 
@@ -66,6 +66,8 @@ a {
 }
 
 ul {
+  display: flex;
+  gap: 18px;
   list-style-type: none;
  
 }
