Align text to center. Set .plant max width 200px

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -17,8 +17,14 @@ img {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 52px;
+}
+
+.plant {
+  max-width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
