--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,6 +22,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  flex-flow: column nowrap;
 }
 
 .icon {
@@ -35,6 +36,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+
+.container-top {
+  display: flex;flex-shrink: 0;
+  justify-content: space-between;
+  
+
 }
 
 .close-button {
