--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,7 +22,6 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  flex-flow: column nowrap;
 }
 
 .icon {
@@ -42,11 +41,12 @@ body {
 .container-top {
   display: flex;flex-shrink: 0;
   justify-content: space-between;
-  
 
 }
 
 .close-button {
+  display: flex;
+  justify-self: end;
   background: #eee;
   border-radius: 50%;
   color: #888;
