--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -17,11 +17,12 @@ body {
 
 .modal {
   display: flex;
-  padding: 10px;
+  padding: 15px;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  gap: 15px;
 }
 
 .icon {
@@ -37,6 +38,14 @@ body {
   justify-content: center;
   flex-shrink: 0;
 }
+
+.header {
+  display: flex;
+  font-size: large;
+  font-weight: bold;
+  justify-content: space-between;
+}
+
 
 .close-button {
   display: flex;
